-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.6.0, Lustre 2.7.0, Lustre 2.5.2, Lustre 2.4.3
-
el6
Lustre 2.4 to Lustre 2.7 (master).
-
3
-
16515
A child directory should inherit from the OST pool of its parent.
In Lustre 2.4 to master (2.7), this is no longer the case: the child directory has no LOV EA stored on the MDS, so the pool inheritance is lost when the MDS restarts.
lfs getstripe indicates the child directory doesn't inherit from its parent pool.
mkdir /mnt/lustre/dir
lfs setstripe -p lustre.pool1 /mnt/lustre/dir
lfs getstripe -p /mnt/lustre/dir
returns "lustre.pool1" (correct)
mkdir /mnt/lustre/dir/subdir
lfs getstripe -p /mnt/lustre/dir/subdir
-> empty (should return lustre.pool1)
getfattr -n trusted.lov -d /mnt/lustre/dir/subdir
/mnt/lustre/dir/subdir: trusted.lov: No such attribute
touch /mnt/lustre/dir/subdir/file
lfs getstripe -p /mnt/lustre/dir/subdir/file
returns "lustre.pool1" (correct). Its seams the MDS inherited the pool somehow.
Then, after restarting the MDS:
touch /mnt/lustre/dir/subdir/file2
lfs getstripe -p /mnt/lustre/dir/subdir/file2
-> empty (should be lustre.pool1)