LU-5916 lod: inherit default pool setting properly

When parent directory has no default striping but has only
default pool setting, the pool setting should be inherited
by subdir properly.

This patch fixed the problem by changing the
LOVEA_DELETE_VALUES() to check pool name as well, and it
removed the unused function lod_store_def_striping().

Signed-off-by: Niu Yawei <yawei.niu@intel.com>
Change-Id: I7ce5251b6c601309aeb91a1b903bde02d0712e25
Reviewed-on: http://review.whamcloud.com/12746
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: wangdi <di.wang@intel.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>