lustre/include/lustre_lib.h
@@ -561,8 +561,10 @@ static inline void obd_ioctl_freedata(char *buf, int len)
 #define LUSTRE_STRIPE_MAXBYTES 0x1fffffff000ULL
 
 /* Special values for remove LOV EA from disk */
-#define LOVEA_DELETE_VALUES(size, count, offset) (size == 0 && count == 0 && \
-                                                 offset == (typeof(offset))(-1))
+#define LOVEA_DELETE_VALUES(size, count, offset, pool)			\
+	((size) == 0 && (count) == 0 &&					\
+	 (offset) == (typeof(offset))(-1) && (pool) == NULL)
+
 
 /* #define POISON_BULK 0 */
 
